-Author Arthur Aghajanyan
        Added html-css/homework
        Updated several details

--- a/Arthur_Aghajanyan/Web/HTML_CSS/re30.04.2019/style.css
+++ b/Arthur_Aghajanyan/Web/HTML_CSS/re30.04.2019/style.css
@@ -1,108 +1,80 @@
 body {
     display: flex;
-    height: 100%;
-    width: 99%;
-    background-color: #eae8e7;
-
+    width: 100%;
 }
-
 .flex-container {
     display: flex;
-    height: 100%;
     width: 100%;
 }
 /*LEFT part*/
-
 /*Left container*/
 .flex-container > .left {
-    display: inline;
-    justify-content: flex-start;
     width: 35%;
-    height: 100%;
     background-color: #96CBC8;
+    color: #000000;
+    font-family: 'Helvian', sans-serif;
 }
-
-/*Account information part*/
+/*Resume text view*/
+.font-resume {
+    font-weight: 500;
+    color:#fff;
+    text-align: center;
+}
 .info {
     background-color: #EBEBED;
     padding-bottom:1px;
 }
-/*Resume text view*/
-.fontResume {
-    font-weight: 500;
-    color:#fff;
-    font-family: 'Helvian', sans-serif;
-    text-align: center;
-}
-.photoImg {
+.info img {
     display: block;
     width: 50%;
     margin: auto;
     padding-top: 7%;
 }
 /*Name text view*/
-.fontInfoName {
+.info h1 {
     text-align: center;
     font-weight: 500;
-    font-family: 'Helvian', sans-serif;
-    color: #000000;
-}
-/*Account text view*/
-.fontInfoAccount {
-    text-align: center;
-    font-weight: 500;
-    font-family: 'Helvian', sans-serif;
-    color: #000000;
-    height:5px;
-    margin-top:-20px;
 }
 /*Data text view*/
-.fontInfoData {
+.info dl dt {
     text-align: center;
     font-weight: 500;
-    font-family: 'Helvian', sans-serif;
-    color: #000000;
 }
 /*Skill tytle*/
-.fontInfoSkill {
-    text-align: center;
-    font-weight: 500;
-    font-family: 'Helvian', sans-serif;
-    color: #000000;
-    height:22px;
-    margin-top: 5px;
+.skills-data {
+    padding-top: 4%;
 }
 /*Skill icon setting*/
-.skillIcon {
+.skills-data img {
     display: block;
     margin: auto;
     padding-left: 15%;
-    width: 25%;
-    height: 25%;
+    width: 100px;
+    height: 50px;
+}
+.skills-data h2 {
+    text-align: center;
+    font-weight: 500;
+    margin-top: 5px;
 }
 /*Skills text view*/
 .fontSkill {
     font-weight: 500;
-    font-family: 'Helvian', sans-serif;
-    color: #000000;
+}
+.skills-data dl dt {
+    font-size: 125%;
+    margin-top: 25px;
 }
 /*Skills setting*/
-.skillList {
+.skills-data div {
     width: 80%;
     display: block;
     margin:auto;
     padding-left: 10%;
     padding-bottom: 10%;
 }
-.skillsData {
-    padding-top: 4%;
-}
-p {
-    margin-bottom: -0.1%;
-    color: #000000;
-}
 /*Skills range setting*/
-input[class=firstGroupSlider] {
+input[class=first-group-slider] {
     margin: auto;
     -webkit-appearance: none;
     position: relative;
@@ -115,7 +87,7 @@ input[class=firstGroupSlider] {
 input[type=range]::-webkit-slider-runnable-track {
     background: black;
 }
-input[class=firstGroupSlider]::-webkit-slider-thumb {
+input[class=first-group-slider]::-webkit-slider-thumb {
     -webkit-appearance: none;
     width: 10px;
     height: 10px;
@@ -124,53 +96,38 @@ input[class=firstGroupSlider]::-webkit-slider-thumb {
     border-radius: 50%;
 }
 /*Message for icon setting*/
-.messageIcon {
+.message-icon {
     display: block;
     margin: auto;
-    width: 10%;
-    height: 10%;
+    width: 50px;
+    height: 50px;
 }
 /*Lenguage text setting*/
-.fontLanguage {
+.left h2 {
     text-align: center;
     font-weight: 500;
-    font-family: 'Helvian', sans-serif;
-    color: #000000;
     margin-top:1%;
     margin-bottom:0.5%;
 }
-
 .flex-container-second {
     display: flex;
-    height: 100%;
     width: 100%;
 }
-
-.secondGroupSlider  {
-    display: inline;
-    justify-content: flex-start;
-}
-
-.sliderDiv {
-    margin-left: 5%;
-}
 /*Language rang setting*/
-input[class=secondGroupSlider] {
+input[class=second-group-slider] {
     margin-top: 90%;
     -webkit-appearance: none;
     border: 1px solid white;
     width: 150%;
     -webkit-transform: rotate(270deg);
 }
-
-input[class=secondGroupSlider]::-webkit-slider-runnable-track {
+input[class=second-group-slider]::-webkit-slider-runnable-track {
     height: 2px;
     background: white;
     border: none;
     border-radius: 1px;
 }
-
-input[class=secondGroupSlider]::-webkit-slider-thumb {
+input[class=second-group-slider]::-webkit-slider-thumb {
     -webkit-appearance: none;
     border: none;
     height: 15px;
@@ -180,85 +137,69 @@ input[class=secondGroupSlider]::-webkit-slider-thumb {
     margin-top: -7px;
 }
 /*Language range position*/
-.languageList {
+.language-list {
     margin-left:-12%;
-    padding-bottom: 40%;
+    padding-bottom: 35%;
 }
-.languageElement {
-    font-weight: 500;
-    color: #000000;
-    font-family: 'Helvian', sans-serif;
-    text-align: center;
+.language-list p {
     margin-left:45%
 }
-/*RIHHT part*/
-
+.language-list div {
+    margin-left: 5%;
+}
+/*RIHHT -----  part*/
 /*Right container*/
 .flex-container > .right {
-    display: inline;
-    justify-content: flex-end;
-    width: 64%;
-    height: 100%;
+    width: 65%;
     background-color: #fff;
+    font-family: 'Helvian', sans-serif;
+}
+.right h2 {
+    font-weight: 800;
+    color:#43938a;
 }
 /*User part*/
-.userIcon {
-    display: block;
-    width: 3%;
-    height: 4%;
+.user-icon {
+    width: 25px;
+    height: 25px;
     margin-left: 2%;
     margin-top: 6%;
 }
-.userText {
-    font-weight: 800;
-    font-family: 'Helvian', sans-serif;
-    color:#43938a;
-}
-.aboutMeText {
+.about-me-text {
     margin-left: 5.5%;
-    font-family: 'Helvian', sans-serif;
+    margin-right: 2.5%;
 }
-.settingHr {
+.right hr {
     margin-left: 4%;
     margin-right: 4%;
     margin-top: 5%;
+    margin-bottom: 2%;
     height: 2px;
     background-color: #eae8e7;
 }
 /*Suitcase part and suitcaseText part*/
-.suitcaseIcon {
-    display: block;
-    width: 4%;
-    height: 5%;
+.settings-icon {
+    width: 30px;
+    height: 30px;
     margin-left: 2%;
     margin-top: 2%;
-    margin-bottom: 0.5%;
-}
-.suitcaseText {
-    margin-top: 50%;
-    font-weight: 800;
-    font-family: 'Helvian', sans-serif;
-    color:#43938a;
 }
 /*Timeline part*/
 ul.timeline {
     list-style-type: none;
     position: relative;
 }
+
 ul.timeline:before {
     content: ' ';
     background: #d4d9df;
-    display: inline-block;
     position: absolute;
     margin-top: 5px;
     left: 29px;
     width: 3px;
-    height: 73%;
-    z-index: 400;
+    height: 70%;
 }
 ul.timeline > li {
-    font-family: 'Helvian', sans-serif;
-
     margin: 20px 0;
     padding-left: 20px;
 }
@@ -266,7 +207,6 @@ ul.timeline > li:before {
     content: ' ';
     margin-top: 5px;
     background: white;
-    display: inline-block;
     position: absolute;
     border-radius: 50%;
     border: 3px solid #000000;
@@ -276,38 +216,22 @@ ul.timeline > li:before {
     z-index: 400;
 }
 .time {
-    font-family: 'Helvian', sans-serif;
     margin-left:2px;
     margin-right:20px;
 }
+.setting-other-text p {
+    margin-left: 120px;
+}
 .company {
     margin-left: 15%;
-    margin-top: -0.2%;
+    margin-top: 1px;
 }
-.otherTextFirst{
-    margin-top: -2%;
-    margin-left: 15%;
-}
-.otherText {
-    color: #717171;
-    margin-top: -2%;
-    margin-left: 15%;
-}
-.studentsCapIcon {
-    display: block;
-    width: 4%;
-    height: 5%;
-    margin-left: 2%;
-    margin-top: 2%;
-    margin-bottom: -1.5%;
-}
-.certificatesInfo {
-    margin-left: 7%;
-    margin-bottom: 8%;
-    font-weight: 500;
-    font-family: 'Helvian', sans-serif;
+.certificates-info dl dt {
+    margin-left: 6%;
+    font-size: 125%;
+    margin-bottom: 20px;
     color: #717171;
 }
-.otherClassForInline {
+.other-class-for-inline {
     display: inline;
 }
