--- a/Anna_Harutyunyan/style.css
+++ b/Anna_Harutyunyan/style.css
@@ -2,73 +2,55 @@
     box-sizing: border-box;
 }
 #first_block { /*Divide by 2 blocks*/
-    
-    width: 30%;
-    display: inline-block;
+    flex: 1;
 }
 #second_block {
-    
-    width: 69%;
-    display: inline-block;
+    flex: 2;   
 }
 #contenier {
     width: 100%;
+    display: flex;
 }
 /*--*/
-
 .resume {
-    width: 100%;
-    background-color: #94cccd;
     text-align: center;
-    font-size: 30px;
-    padding: 10px;
     color: white;
 }
 .name {
     text-align: center;
-    line-height: 0.3;
-   
+    line-height: 0.3; 
 }
-p {
-    font-size: 16px;
+div[name="color"] {
+    background-color: #94cccd;
 }
-.image {
+img {
      width: 70%;
      margin: auto;
      display: block;
      border-radius: 50%;
-     padding: 15px;
+     padding: 25px;
 }
-.account {
+.account {/*background around image and contacts*/
     background-color: #e7e7e9;
     width: 100%;
 }
-.contact {
-    
+.contact {    
     padding: 5px;
     text-align: center;
     line-height: 0.3;
 }
-.setting {
-    width: 7%;
-}
-.skills {
+.right-icons {
     text-align: center;
     line-height: 0;
-    padding: 5px;
-}
-
-.inp {
-    padding: 3px;
+   /* padding: 5px;*/
 }
 .skill_size {
-
     padding-left: 10%;
     font-size: 16px;
     line-height: 0;
 }
 /*Here the style for input/range for work in mozilla*/
-.range::-moz-range-track {
+div>input[name=horizontal]::-moz-range-track {
     -moz-appearance: none;
     border: 1px solid #d4d4d4;
     background: -moz-linear-gradient(left, #fff 0%, #fff 25%, #000 25%, #000 100%);
@@ -78,7 +60,7 @@ p {
     height: 10px;
     outline: none;
 }
-.range::-moz-range-thumb {
+div>input[name=horizontal]::-moz-range-thumb {
     -moz-appearance: none;
     background-color: #d4d4d4;
     width: 0px;
@@ -108,10 +90,11 @@ p {
 .range7 {
     background: -moz-linear-gradient(left, #fff 0%, #fff 78%, #000 78%, #000 100%);
 }
+/* vertical inputs for mozilla */
 /*end -moz-*/
 
 /*Here the style for input/range for work in Chrome*/
-.range {
+div>input[name=horizontal] {
     -webkit-appearance: none;
     border: 1px solid #d4d4d4;
     width: 80%;
@@ -121,7 +104,7 @@ p {
     outline: none;
     border-radius: 20px;
 }
-.range::-webkit-slider-thumb {
+div>input[name=horizontal]::-webkit-slider-thumb {
     -webkit-appearance: none;
     background-color: #d4d4d4;
     width: 0px;
@@ -129,8 +112,6 @@ p {
     border-radius: 18px;
     cursor: pointer;
 }
-
-
 .range1 {
     background: -webkit-linear-gradient(left, #fff 0%, #fff 90%, #000 90%, #000 100%);
 }
@@ -155,17 +136,6 @@ p {
 /* End -chrome-*/
 
 /*style for vertical input/range for choosing the languages level*/
-
-.language {
-    width: 7%;
-}
-.lang {
-    text-align: center;
-    line-height: 0;
-    padding-top: 10px;
-   
-}
-
 /* For working in Chrome */
 .vertical-range {
     -webkit-appearance: none;
@@ -176,8 +146,7 @@ p {
     height: 8px;
     outline: none;
     border-radius: 20px;
-    margin: 20px;
-   
+    margin: 20px;   
 }
 .vertical-range::-webkit-slider-thumb {
     -webkit-appearance: none;
@@ -187,7 +156,6 @@ p {
     border-radius: 18px;
     cursor: pointer;
 }
-
 .vertical-range1 {
     background: -webkit-linear-gradient(left, #fff 0%, #fff 65%, #000 65%, #000 100%);
 }
@@ -206,67 +174,58 @@ p {
     -ms-transform: rotate(270deg);
     transform: rotate(270deg)
 }
-
 .vert-input {
     float: right;
     display: inline-block;
     width: 33%;
-    padding-top: -10px ;
-
 }
-.block1 {
+.block-left {
     background-color:  #94cccd;
-    padding-bottom: 50px;
-    
+    padding-bottom: 50px;    
 }
 .city {
     text-align: center;
     padding-bottom:25px;
     font-size: 16px;
+    margin-bottom: 20px;
 }
-
+.fa-cogs:before, .fa-commenting {
+    color: #fff;
+    padding-top: 15px;
+}
 
 /* Stayling for the second block---2 */
+.fa-user, .fa-suitcase, .fa-graduation-cap, .fa-trophy {
+    color: #4c9793;
+    padding-left: 15px;
+}
 hr {
     width: 96%;
-    margin-bottom: 5%;
+    margin-bottom: 30px;
 }
-.person-icon {
-    width: 3%;
+li {
+    padding-right: 25px;
 }
-.person {
+span[name=title] {
    font-size: 22px;
    font-weight: bold;
-   padding-bottom: 5px; 
+   padding-bottom: 5px;
+   padding-left: 10px;
    color: #4c9793;
 }
-.about-person {
-    position: absolute;
-    top: 0;
-    padding-top: 3.5%;
+.about-me {
+    padding-top: 60px;
     line-height: 1;
 }
 .text-about-me {
     text-align: justify;
-    margin-left: 3.5%;
-    margin-right: 3.5%;
+    margin-left: 40px;
+    margin-right: 40px;
+    font-size: 14px;
 }
 .border {
     border-left: 1px solid black;
-    margin-left: 2.5%;
-    padding-left: 15px;  
-}
-.prof-icon {
-    width: 3%; 
-}
-.profesion {
-    position: absolute;
-    top: 25%;
-    padding-top: 1%;
-    line-height: 1;    
-}
-.title-row {
-    padding-left: 5px; 
+    margin-left: 25px;  
 }
 .distance {
     margin-top: 30px; 
@@ -275,26 +234,34 @@ hr {
 .year {
     margin-left: 11%;
     line-height: 1;
-    font-size: 16px;
+    font-size: 14px;
+}
+li span {
+    font-weight: bold;
+}
+li p {
+    padding-left: 40px; 
 }
 .job {
-    padding-left: 15px;
-    font-size: 16px;  
+    padding-left: 20px;
+    font-size: 14px; 
 }
-.education {
-    position: absolute;
-    top: 100%;
-    padding-top: 1%;
-    line-height: 1;    
+ul>li { 
+    font-size: 14px;
+    list-style: square inside url("data:image/gif;base64,R0lGODlhBQAKAIABAAAAAP///yH5BAEAAAEALAAAAAAFAAoAAAIIjI+ZwKwPUQEAOw==");
 }
-.sertificat-icon {
-    width: 2.5%;
-    margin-right: 5px; 
-}
-.person-sertificates {
-    line-height: 0.3;
-    margin-left: 3.5%;
-}
+
+
+/* small screen version */
+/*
+@media (max-width: 768px) {
+    #contenier {
+        display: block;
+    }
+  }
+*/
+
+
 
 
 
