--- a/Anahit_Karyan_Web/Html_Css/2-30.04/Resume page/Styles/styles.css
+++ b/Anahit_Karyan_Web/Html_Css/2-30.04/Resume page/Styles/styles.css
@@ -147,8 +147,8 @@ ul li::before {
     opacity: 0.5;
     content: "";
     position: absolute;
-    top: 15%;
-    left: -12px;
+    top: 12px;
+    left: -14px;
     width: 1px;
     height: 100%;
 }
