--- a/Anahit_Karyan/JS/3-13.05/Styles/style.css
+++ b/Anahit_Karyan/JS/3-13.05/Styles/style.css
@@ -5,6 +5,7 @@
 .collect , .bita {
 	height: 40px; 
 	float: right;
+	margin: 5px;
 }
 .img-cards {
 	width: 20%;
@@ -12,4 +13,10 @@
 .myCards {
 	width: 120px;
 	height: 200px;
+}
+.cardSection, div {
+	padding: 15px;
+}
+div h1 {
+	margin-left: 30%;
 }
