--- a/Tigran_Nalbandyan/JavaScript/Durak/css/style.css
+++ b/Tigran_Nalbandyan/JavaScript/Durak/css/style.css
@@ -1,18 +1,51 @@
 .card {
 	width: 70px;
 	height: 100px;
-	background-color: rgba(150, 0, 0, 0.7);
+	background-color: rgba(150, 50, 60, 1);
 	display: inline-flex;
 	justify-content: center;
 	align-items: center;
 	border-radius: 5%;
-	margin: 4px;
 	border: 2px solid grey;
+	margin: 2px;
+/* 	position: relative;
+	right: 20px; */
 }
 
-.cards, .buttons{
+.cards, .buttons {
 	display: flex;
 	justify-content: center;
+}
+
+.buttons {
+	margin-top: 30px;
+}
+
+.buttons > button {
+	display: inline-block;
+	padding: 6px 20px;
+	margin: 0 10px;
+	cursor: pointer;
+	border: 1px solid #bbb;
+	overflow: visible;
+	font: bold 13px arial, helvetica, sans-serif;
+	text-decoration: none;
+	white-space: nowrap;
+	color: #555;
+	background-color: #ddd;
+}
+.buttons > button:hover{
+  background-color: #eee;
+  color: #555;
+}
+.buttons > button:active{
+  background: #e9e9e9;
+  position: relative;
+  top: 1px;
+  text-shadow: none;
+  -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, .3) inset;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .3) inset;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, .3) inset;
 }
 
 .card > span {
@@ -20,16 +53,26 @@
 	color: white;
 }
 
+.card-relative {
+	position: relative;
+	top: 20px;
+	right: 20px;
+}
+
 #middle {
 	display: flex;
+    text-align: center;
+    align-items: center;
 }
 
 #trump {
 	align-self: flex-start;
+	position: initial;
 }
 
 #table {
 	width: 100%;
+	margin-right: 40px;
 	justify-self: center;
 }
 
