--- a/Tigran_Nalbandyan/ReactJS/project/src/App.css
+++ b/Tigran_Nalbandyan/ReactJS/project/src/App.css
@@ -1,30 +1,33 @@
 #App {
-  padding-left: 20px;
+  display: grid;
+	justify-content: center;
 }
 
 input {
   margin-right: 10px;
 }
 
-.list-table {
-  text-align: center;
-  border-collapse: collapse;
-   border: 1px solid black;
-   margin-top: 20px;
-   margin-bottom: 20px;
+textarea {
+	margin-top: 10px;
+	max-width: 50%;
+	max-height: 100px;
 }
 
-.list-table > td, th{
-  padding: 4px;
+form {
+	position: fixed;
+	bottom: 10px;
+	left: 25%;
+	background-color: white;
+	border: 2px solid black;
+	padding: 10px;
 }
 
 #cards {
-	display: grid;
-	justify-content: center;
+	margin-bottom: 100px;
 }
 
 .card {
-	margin: 5px 20px;
+	margin: 20px 0;
 	padding: 20px;
 	min-width: 300px;
 	max-width: 600px;
