--- a/Tigran_Nalbandyan/ReactJS/project/src/App.css
+++ b/Tigran_Nalbandyan/ReactJS/project/src/App.css
@@ -21,6 +21,7 @@ textarea {
   right: 16%;
   transition: 0.4s;
   padding-right: 10px;
+  border-radius: 10px;
 }
 
 .form:hover {
@@ -28,36 +29,24 @@ textarea {
   transition: 0.4s;
 }
 
-table {
+#table {
   margin: 20px;
-	border-collapse: collapse;
-	border-spacing: 0;
-  text-align: center;
+}
+
+table tr:nth-child(even){
+    background-color: rgba(0,0,0,.05);
 }
 
 th, td {
 	padding: 10px;
 }
 
-th:hover {
+th {
+  cursor: pointer;
+}
+
+th > span:hover {
   text-decoration: underline;
-}
-
-#cards {
-	margin-bottom: 100px;
-}
-
-.card {
-	margin: 20px 0;
-	padding: 20px;
-	min-width: 300px;
-	max-width: 600px;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-}
-
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 .close-icon {
@@ -86,22 +75,16 @@ th:hover {
   bottom: 5px;
 }
 
-.triangle {
-	width: 10px;
-	height: 5px;
-
-	&--hidden {
-		visibility: hidden;
-
-		@at-root .filter:hover & {
-			visibility: visible;
-		}
-	}
-}
-
 table.sortable thead {
     background-color:#eee;
     color:#666666;
     font-weight: bold;
     cursor: default;
+    border-collapse: collapse;
+    border-spacing: 0;
+    text-align: center;
+}
+
+.pagination {
+  margin: 0;
 }
