--- a/Mane_Antonyan/new/src/App.css
+++ b/Mane_Antonyan/new/src/App.css
@@ -111,10 +111,6 @@ input {
    width: 400px;
 }
 
-select {
-   margin: 0;
-}
-
 .button {
    width: 120px;
    height: 40px;
@@ -144,4 +140,16 @@ Form {
    right: 0;
    bottom: 0;
    overflow: auto;
+}
+
+Select {
+   padding: 0.5em 0.6em;
+   display: inline-block;
+   border: 1px solid #ccc;
+   box-shadow: inset 0 1px 3px #ddd;
+   border-radius: 4px;
+   vertical-align: middle;
+   box-sizing: border-box;
+   width: 400px;
+   margin: 0;
 }
