--- a/Garik_Saghumyan/Web/JS/REACT/react_project_homework/src/components/Login.module.css
+++ b/Garik_Saghumyan/Web/JS/REACT/react_project_homework/src/components/Login.module.css
@@ -1,7 +1,10 @@
+
 .Login {
     padding: 60px 0;
-    background-color: gray;
+    display: flex;
+    justify-content: center;
     text-align: center;
+    background-color: grey;
   }
 
 .form {
