Add log out, data passing to home and table from old homework

--- a/Tigran_Nalbandyan/ReactJS/my_project/src/App.css
+++ b/Tigran_Nalbandyan/ReactJS/my_project/src/App.css
@@ -14,4 +14,19 @@
 
 .list {
   width: 250px;
+  text-align: center;
 }
+
+.list-header {
+  padding: 10px 0;
+}
+
+.big-avatar {
+  margin: 10px;
+  border-radius: 50%;  
+}
+
+.login-text {
+  font-style: italic;
+}
+
