--- a/Hunan_Khachatryan/React/loginpage/src/Components/Registry/Registry.module.css
+++ b/Hunan_Khachatryan/React/loginpage/src/Components/Registry/Registry.module.css
@@ -13,7 +13,9 @@
     height: 2em;
     margin: 5px;
   }
-  
+  label{
+    padding-right: 2em;
+  }
   .signUpButton{ 
     background: rgb(3, 180, 18);
     border-radius: 3px;
