Add material-table, fix route system, add redux structure

--- a/Tigran_Nalbandyan/ReactJS/my_project/src/components/table/Table.css
+++ b/Tigran_Nalbandyan/ReactJS/my_project/src/components/table/Table.css
@@ -1,92 +1,3 @@
-
-
-#Table {
-  padding: 20px 0;
-  display: grid;
-	justify-content: center;
-  font-family: sans-serif;
-}
-
-textarea {
-	margin-top: 10px;
-	max-width: 50%;
-	max-height: 100px;
-}
-
-.form {
-	position: fixed;
-	bottom: 10px;
-	background-color: white;
-	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.4);
-	padding: 10px 25px;
-  left: 16%;
-  right: 16%;
-  transition: 0.4s;
-  padding-right: 10px;
-  border-radius: 10px;
-}
-
-.form:hover {
-  box-shadow: 0 16px 32px 8px rgba(0,0,0,0.4);
-  transition: 0.4s;
-}
-
-#table {
-  margin: 20px;
-}
-
-table tr:nth-child(even){
-    background-color: rgba(0,0,0,.05);
-}
-
-th, td {
-	padding: 10px;
-}
-
-th {
-  cursor: pointer;
-}
-
-th > span:hover {
-  text-decoration: underline;
-}
-
-.close-icon {
-  display: flex;
-  justify-content: space-between;
-}
-
-.close-icon > * {
-  height: 20px;
-}
-
-.close-icon > *:hover {
-  transition: 0.5s;
-}
-
-.close-icon > *:nth-child(1):hover {
-	background-color: rgba(255,0,0,0.7);
-}
-
-.close-icon > *:nth-child(2):hover {
-	background-color: #4CAF50;
-}
-
-.close-icon > *:nth-child(2) > svg {
-  position: relative;
-  bottom: 5px;
-}
-
-table.sortable thead {
-    background-color:#eee;
-    color:#666666;
-    font-weight: bold;
-    cursor: default;
-    border-collapse: collapse;
-    border-spacing: 0;
-    text-align: center;
-}
-
-.pagination {
-  margin: 0;
+.table {
+  margin: 50px;
 }
