--- a/Garik_Saghumyan/Web/JS/REACT/react_project_homework/src/components/Login.module.css
+++ b/Garik_Saghumyan/Web/JS/REACT/react_project_homework/src/components/Login.module.css
@@ -1,13 +1,13 @@
 
 .Login {
-    padding: 60px 0;
     display: flex;
     justify-content: center;
     text-align: center;
-    background-color: grey;
+    background-color: rgb(9, 50, 60);
   }
 
 .form {
-    margin: 0 auto;
-    max-width: 320px;
+    margin: 230px ;
+    padding: 20px;
+    background-color: rgb(85, 108, 114);
 }
