--- a/Tigran_Nalbandyan/Qt/Login/mainwindow.ui
+++ b/Tigran_Nalbandyan/Qt/Login/mainwindow.ui
@@ -55,6 +55,11 @@
       <height>21</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">body {
+	color: red;
+}</string>
+    </property>
     <property name="text">
      <string>Name</string>
     </property>
@@ -249,7 +254,7 @@
      <x>0</x>
      <y>0</y>
      <width>471</width>
-     <height>26</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
