--- a/Tigran_Nalbandyan/Qt/Browser/XMLParser/mainwindow.ui
+++ b/Tigran_Nalbandyan/Qt/Browser/XMLParser/mainwindow.ui
@@ -13,14 +13,16 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
-  <widget class="QWidget" name="centralWidget"/>
+  <widget class="QWidget" name="centralWidget">
+   <layout class="QVBoxLayout" name="verticalLayout"/>
+  </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
      <width>548</width>
-     <height>22</height>
+     <height>26</height>
     </rect>
    </property>
   </widget>
